# pq-peek

./: PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  smoke.yml
examples/: generate_dummy.py
src/pq_peek/: generate_dummy.py  main.py
